Add quickfix MapUI